Create endpoint that answer the total rainfalls without object schema
